[package]
name = "deepwell"
description = "Database management and migrations service"
version = "0.0.6"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml

[dependencies]
arrayvec = "0.5"
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["chrono", "network-address", "postgres"] }
either = "1"
futures = "0.3"
ipnetwork = "*"
lazy_static = "1"
log = "0.4"
rand = "0.7"
regex = "1"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subprocess = "0.1"
thiserror = "1"
wikidot-normalize = "0.3"

[dev-dependencies]
color-backtrace = "0.2"
tempfile = "3"
