[package]
name = "deepwell"
description = "Database management and migrations service"
repository = "https://github.com/Nu-SCPTheme/deepwell"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "revision", "database", "nuscp"]
categories = ["asynchronous"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.9"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml

[workspace]
members = [
    ".",
    "deepwell-core",
]

[dependencies]
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }
cow-utils = "0.1"
deepwell-core = { path = "deepwell-core" }
diesel = { version = "1", features = ["chrono", "postgres"] }
either = "1"
futures = "0.3"
lazy_static = "1"
log = "0.4"
rand = "0.7"
ref-map = "0.1"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
subprocess = "0.2"
tinyvec = "0.3"
wikidot-normalize = "0.4"

[dev-dependencies]
color-backtrace = "0.3"
tempfile = "3"
