[package]
name = "deepwell-core"
description = "Database management and migrations service"
repository = "https://github.com/Nu-SCPTheme/deepwell"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "revision", "database", "nuscp"]
categories = ["asynchronous"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.8"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml
workspace = ".."

[lib]
name = "deepwell_core"
path = "src/lib.rs"

[dependencies]
arrayvec = "0.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["chrono", "network-address", "postgres"] }
lazy_static = "1"
log = "0.4"
ref-map = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
subprocess = "0.2"
thiserror = "1"
