[package]
name = "deepwell-rpc"
description = "Database management and migrations service"
repository = "https://github.com/Nu-SCPTheme/deepwell"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "revision", "database", "nuscp"]
categories = ["asynchronous"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.2"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml
workspace = ".."

[lib]
name = "deepwell_rpc"
path = "src/lib.rs"

[[bin]]
name = "deepwell-server"
path = "src/main.rs"

[dependencies]
async-std = "1"
color-backtrace = "0.3"
deepwell = "0.0.7"
deepwell-core = "0.0.6"
futures = "0.3"
ipnetwork = "0.15"
log = "0.4"
pretty_env_logger = "0.3"
ref-map = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str-macro = "0.1"
structopt = "0.3"
tarpc = { version = "0.20", features = ["full"] }
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
toml = "0.5"
